# practice

./: .gitignore  README.md
advent-of-code/2018/: README.md
advent-of-code/2018/haskell/: day01.hs
advent-of-code/2019/: README.md
advent-of-code/2019/rust/: Cargo.toml
advent-of-code/2020/: README.md
advent-of-code/2020/cpp/: day01.cc  day03.cc  day03.txt  day05.cc  day05.txt  day13.cc  day13.txt  meson.build
advent-of-code/2020/haskell/: day01.hs  day01.txt
advent-of-code/2021/: README.md
advent-of-code/2021/haskell/: day01.hs  day02.hs
day01/: Cargo.toml
day01/src/: main.rs
exercism/bash/error-handling/: error_handling.sh  error_handling_test.sh
exercism/bash/grains/: grains.sh
exercism/bash/hello-world/: hello_world.sh
exercism/bash/leap/: leap.sh
exercism/bash/raindrops/: raindrops.sh
exercism/bash/reverse-string/: reverse_string.sh
exercism/bash/scrabble-score/: scrabble_score.sh  scrabble_score_test.sh
exercism/bash/two-fer/: two_fer.sh  two_fer_test.sh
exercism/haskell/acronym/: package.yaml
exercism/haskell/anagram/: package.yaml
exercism/haskell/leap/: package.yaml
other/c/: .clang-tidy  common.c  common.h  fib.c  fibonacci.c  meson.build  nth_prime.c
other/c/huffman/: heap.c  heap.h  huffman.c  map.c  map.h  meson.build  tree.c  tree.h
other/c/huffman/corpora/: beowulf.txt  the_adventures_of_huckleberry_finn.txt
other/cpp/: .clang-tidy  fib.cc  fibonacci.cc  isogram.cc  meson.build  nth_prime.cc
other/haskell/: fib.hs  nth_prime.hs
other/racket/: fib.rkt  primes.rkt
other/rust/: Cargo.toml
(+90 files in other folders)
